--- a/tablet/setting/noshow.mdx
+++ b/tablet/setting/noshow.mdx
@@ -21,8 +21,7 @@ description: "회의 시작하는 방법을 노쇼 설정에 따라 알려드립
     <img src="/images/tablet/setting/noshow/img1.png" width="100%" />
 </Frame>
 <br />
-회의 시작을 누르시면 회의 진행 중 여러 기능을 사용해보실 수 있는 `on-air` 화면이 띄워집니다. <br /> `on-air`화면에 대해 더 알고싶으시다면,
-[on-air 화면 자세히 보기](https://mile.mintlify.app/tablet/setting/noshow#3)을 확인해주세요.
+회의 시작을 누르시면 회의 진행 중 여러 기능을 사용해보실 수 있는 `on-air` 화면이 띄워집니다. <br /> `on-air`화면에 대해 더 알고싶으시다면, <a href="https://mile.mintlify.app/tablet/setting/noshow#3">on-air 화면 자세히 보기</a>을 확인해주세요.
 
 <Frame>
     <img src="/images/tablet/setting/noshow/img2.png" width="100%" />
@@ -32,10 +31,10 @@ description: "회의 시작하는 방법을 노쇼 설정에 따라 알려드립
 ## 2. 노쇼 기능 비활성화
 
 노쇼 기능이 비활성화 된 회의실은 회의 시간이 되지 않았을 때 다음 타임의 회의실 예약 내역을 알려주는 대기화면이 띄워집니다. <br/>
-해당 대기화면의 자세한 내용은 [예약 현황 조회하기](https://mile.mintlify.app/tablet/show)에서 확인하실 수 있습니다.
+해당 대기화면의 자세한 내용은 <a href="https://mile.mintlify.app/tablet/show">예약 현황 조회하기</a>에서 확인하실 수 있습니다.
 
 <Frame>
-<img src="/images/tablet/setting/noshow/img3.png" width="100%" />
+    <img src="/images/tablet/setting/noshow/img3.png" width="100%" />
 </Frame>
 
 <br />
@@ -57,10 +56,10 @@ on-air화면은 회의가 시작될 때 전환되는 화면이며, 회의가 진
 </Frame>
 
 -   **예약 현황**: 예약 현황을 조회해볼 수 있는 버튼입니다.
--   **바로 예약**: 회의 중에 다음 회의를 바로 예약할 수 있습니다. [더 자세히 보기](https://mile.mintlify.app/tablet/book/next)
--   **연장하기**: 회의시간이 부족할 때, 회의실 예약 시간을 연장할 수 있습니다. [더 자세기 보기](https://mile.mintlify.app/tablet/meeting-extend/extend)
+-   **바로 예약**: 회의 중에 다음 회의를 바로 예약할 수 있습니다. <a href="https://mile.mintlify.app/tablet/book/next">더 자세히 보기</a>
+-   **연장하기**: 회의시간이 부족할 때, 회의실 예약 시간을 연장할 수 있습니다. <a href="https://mile.mintlify.app/tablet/meeting-extend/extend">더 자세히 보기</a>
 -   **타이머 보기**: 회의실 참여자의 선호도에 따라 타이머 보기를 설정하여 태블릿 화면을 전환시킬 수 있습니다.
--   **회의 종료**: 회의가 종료되었을 시에 누르는 버튼입니다. [더 자세히 보기](https://mile.mintlify.app/tablet/end)
+-   **회의 종료**: 회의가 종료되었을 시에 누르는 버튼입니다. <a href="https://mile.mintlify.app/tablet/end">더 자세히 보기</a>
 
 <br />
 ### 3-2. 타이머 끄기
@@ -68,3 +67,5 @@ on-air화면은 회의가 시작될 때 전환되는 화면이며, 회의가 진
 <Frame>
     <img src="/images/tablet/setting/noshow/img5.png" width="100%" />
 </Frame>
+
+
