--- a/tablet/show.mdx
+++ b/tablet/show.mdx
@@ -31,7 +31,7 @@ description: "태블릿 내에서 회의 예약 현황을 조회하고 예약해
 우측 상단부에서 예약 현황을 조회하고 싶으신 회의실을 선택해주시면, 해당 회의실의 예약을 우측 화면에서 보실 수 있습니다.
 <Warning>
   Hurble 회의실을 선택한 후, 바로 예약 버튼을 누르시면 Hurble 회의실 바로 예약 페이지로 이동됩니다. <br />
-  현재 회의실을 예약할 때에는 꼭 선택된 회의실이 현재 회의실이 맞는지 확인해주세요!
+  <u>현재 회의실을 예약할 때에는 꼭 선택된 회의실이 현재 회의실이 맞는지 확인해주세요!</u>
 </Warning>
 <Frame>
   <img src="/images/tablet/show/img2.png" width="100%" height="500" />
