--- a/question.mdx
+++ b/question.mdx
@@ -3,7 +3,7 @@ title: "자주 묻는 질문"
 description: "FAQ"
 ---
 
----
+<Note>도입 문의가 필요하시다면 support@mile.im 혹은 [채팅 상담](https://mile.channel.io/home)을 통해 편히 문의해 주시길 바랍니다.</Note>
 
 <AccordionGroup>
     <Accordion title="Q. 추가 기능 요청, 커스터마이징 등의 요구사항도 반영해주실 수 있나요?">
@@ -21,7 +21,7 @@ description: "FAQ"
         support@mile.im 혹은 마일 서비스 내 외부의 채널톡을 통해 문의주세요! 24시간 내로 마일 팀이 직접 답변 및 조치를 취해드리겠습니다.
     </Accordion>
     <Accordion title="Q. 신규 입사자가 마일 서비스 내에서 보이지 않습니다. or 지난달 퇴사자가 여전히 남아 있어요.">
-        마일 서비스는 구글 워크스페이스와의 연동을 기반으로 제공되고 있습니다.
+        마일 서비스는 구글 워크스페이스와의 연동을 기반으로 제공되는 서비스입니다.
         
         신규 입/퇴사자가 발생한 경우 <strong>마일 관리자 웹페이지 > 서비스 연동 > 구글 스페이스 연동 > 멤버 관리</strong>에서 동기화 작업을 진행해주셔야 합니다. 구체적인 과정은 <a href="https://mile.mintlify.app/notice">구글 캘린더 연동하기</a>에서 확인하실 수 있습니다.
     </Accordion>
