--- a/introduction.mdx
+++ b/introduction.mdx
@@ -6,7 +6,7 @@ description: 마일 가이드에 오신 것을 환영합니다!
 ---
 
 <Note>
-  가이드에서 충분한 답을 얻지 못했거나, 문제가 발생한 경우 support@mile.im 혹은 [이 곳](https://mile.channel.io/home)에서 편히 문의해 주시길 바랍니다.
+  가이드에서 충분한 답을 얻지 못했거나, 문제가 발생한 경우<br />support@mile.im 혹은 [이곳](https://mile.channel.io/home)을 통해 편히 문의해 주시길 바랍니다.
 </Note>
 
 -   <a href="https://mile.mintlify.app/product">제품 소개서</a>
