--- a/tablet/show.mdx
+++ b/tablet/show.mdx
@@ -1,21 +1,21 @@
 ---
 title: "회의실 예약 현황 조회하기"
-description: "태블릿 내에서 회의 예약 현황을 조회하고 예약해보세요."
+description: "태블릿에서 회의실 예약 현황을 확인할 수 있습니다."
 ---
 
 ---
 
-## 1. 홈 화면 상세 기능 안내
+## [ 홈 화면 상세 기능 안내 ]
 <Frame>
   <img src="/images/tablet/show/img3.png" width="100%" height="500" />
 </Frame>
 
 1. 현재 회의실을 나타냅니다.
-2. 현재 일시를 확인할 수 있습니다.
-3. 현재 회의실에 예정되어있는 다음 회의 정보를 나타냅니다.
+2. 현재 일자, 시간을 보여줍니다.
+3. 현재 회의실에 예정되어있는 <strong>다음 회의 정보</strong>를 나타냅니다.
  
 <br />
-## 2. 현재 회의실 예약 조회하기
+## 1. 현재 회의실 예약 조회하기
 
 회의 시작 전 대기 화면에서 해당 회의실의 예약 현황을 조회해보실 수 있습니다.
 
@@ -26,7 +26,7 @@ description: "태블릿 내에서 회의 예약 현황을 조회하고 예약해
 </Frame>
 
 <br />
-## 3. 다른 회의실 예약 조회하기
+## 2. 다른 회의실 예약 조회하기
 
 우측 상단부에서 예약 현황을 조회하고 싶으신 회의실을 선택해주시면, 해당 회의실의 예약을 우측 화면에서 보실 수 있습니다.
 <Warning>
