--- a/tablet/show.mdx
+++ b/tablet/show.mdx
@@ -15,20 +15,18 @@ description: "태블릿에서 회의실 예약 현황을 확인할 수 있습니
 3. 현재 회의실에 예정되어있는 <strong>다음 회의 정보</strong>를 나타냅니다.
  
 <br />
-## 1. 현재 회의실 예약 조회하기
+## 1. 현재 회의실 예약 현황 조회하기
 
-회의 시작 전 대기 화면에서 해당 회의실의 예약 현황을 조회해보실 수 있습니다.
-
-예약 현황을 보시고 후속으로 우측 하단부에 `회의실 바로 예약`버튼을 통해 예약을하고 회의를 진행하실 수 있습니다.
-
+회의 시작 전 대기 화면에서 해당 회의실의 예약 현황을 조회할 수 있습니다. 
 <Frame>
   <img src="/images/tablet/show/img1.png" width="100%" height="500" />
 </Frame>
+<Info>예약 현황을 확인하고 우측 하단부에 `회의실 바로 예약` 버튼을 통해 회의를 예약해보세요! 자세한 내용은 <a href="https://mile.mintlify.app/tablet/book/tablet">태블릿으로 예약하기</a>를 참고해주세요.<Info>
 
 <br />
 ## 2. 다른 회의실 예약 조회하기
 
-우측 상단부에서 예약 현황을 조회하고 싶으신 회의실을 선택해주시면, 해당 회의실의 예약을 우측 화면에서 보실 수 있습니다.
+우측 상단부의 회의실 목록 중에서 원하는 회의실을 선택하면, 선택한 회의실의 예약 현황 조회할 수 있습니다.
 <Warning>
   Hurble 회의실을 선택한 후, 바로 예약 버튼을 누르시면 Hurble 회의실 바로 예약 페이지로 이동됩니다. <br />
   <u>현재 회의실을 예약할 때에는 꼭 선택된 회의실이 현재 회의실이 맞는지 확인해주세요!</u>
@@ -37,6 +35,6 @@ description: "태블릿에서 회의실 예약 현황을 확인할 수 있습니
   <img src="/images/tablet/show/img2.png" width="100%" height="500" />
 </Frame>
 
-회의실 예약 내역을 조회해보시고, 비는 시간에 예약까지 마무리 해보세요! 바로 예약 기능에 대해서 더 자세히 보시려면, <a href="https://mile.mintlify.app/tablet/book/tablet">태블릿으로 예약하기</a>에서 확인해보실 수 있습니다.
+<Info>예약 현황을 확인하고 우측 하단부에 `회의실 바로 예약` 버튼을 통해 회의를 예약해보세요! 자세한 내용은 <a href="https://mile.mintlify.app/tablet/book/tablet">태블릿으로 예약하기</a>를 참고해주세요.<Info>
 
 <br />
