--- a/tablet/show.mdx
+++ b/tablet/show.mdx
@@ -21,7 +21,9 @@ description: "태블릿에서 회의실 예약 현황을 확인할 수 있습니
 <Frame>
   <img src="/images/tablet/show/img1.png" width="100%" height="500" />
 </Frame>
-<Info>예약 현황을 확인하고 우측 하단부에 `회의실 바로 예약` 버튼을 통해 회의를 예약해보세요! 자세한 내용은 <a href="https://mile.mintlify.app/tablet/book/tablet">태블릿으로 예약하기</a>를 참고해주세요.<Info>
+<Info>
+  예약 현황을 확인하고 우측 하단부에 `회의실 바로 예약` 버튼을 통해 회의를 예약해보세요! 자세한 내용은 <a href="https://mile.mintlify.app/tablet/book/tablet">태블릿으로 예약하기</a>를 참고해주세요.
+</Info>
 
 <br />
 ## 2. 다른 회의실 예약 조회하기
@@ -35,6 +37,8 @@ description: "태블릿에서 회의실 예약 현황을 확인할 수 있습니
   <img src="/images/tablet/show/img2.png" width="100%" height="500" />
 </Frame>
 
-<Info>예약 현황을 확인하고 우측 하단부에 `회의실 바로 예약` 버튼을 통해 회의를 예약해보세요! 자세한 내용은 <a href="https://mile.mintlify.app/tablet/book/tablet">태블릿으로 예약하기</a>를 참고해주세요.<Info>
+<Info>
+  예약 현황을 확인하고 우측 하단부에 `회의실 바로 예약` 버튼을 통해 회의를 예약해보세요! 자세한 내용은 <a href="https://mile.mintlify.app/tablet/book/tablet">태블릿으로 예약하기</a>를 참고해주세요.
+</Info>
 
 <br />
