--- a/tablet/show.mdx
+++ b/tablet/show.mdx
@@ -29,7 +29,7 @@ description: "태블릿에서 회의실 예약 현황을 확인할 수 있습니
 <br />
 ## 2. 다른 회의실 예약 조회하기
 
-우측 상단부의 회의실 목록 중에서 원하는 회의실을 선택하면, 선택한 회의실의 예약 현황 조회할 수 있습니다.
+우측 상단부의 회의실 목록에서 원하는 회의실을 선택하면, <strong>선택한 회의실의 예약 현황을 조회</strong>할 수 있습니다.
 <Warning>
   Hurble 회의실을 선택한 후, 바로 예약 버튼을 누르시면 Hurble 회의실 바로 예약 페이지로 이동됩니다. <br />
   <u>현재 회의실을 예약할 때에는 꼭 선택된 회의실이 현재 회의실이 맞는지 확인해주세요!</u>
