--- a/tablet/book/tablet.mdx
+++ b/tablet/book/tablet.mdx
@@ -1,28 +1,30 @@
 ---
 title: "태블릿으로 예약하기"
-description: "예약된 회의를 조회하고 바로 예약까지의 과정을 알려드립니다."
+description: "태블릿에서 회의실 예약하는 방법을 알려드립니다."
 ---
 
 ---
 
 ## 1. 회의실 바로 예약하기
-
-회의실 별 예약 현황을 조회하고, 바로 예약이 가능한 회의실과 예약 시간대를 확인하실 수 있습니다.<br/>
-회의실 예약 현황에 대한 내용은 <a href="https://mile.mintlify.app/tablet/show">예약 현황 조회하기</a>에서 확인하실 수 있습니다.
-
-빈 시간대에 예약을 원하신다면, 우측 하단부의 `회의실 바로 예약`버튼을 눌러줍니다.
-
+회의실 예약을 원하신다면, 우측 하단부의 `회의실 바로 예약`버튼을 눌러줍니다.
+<Warning>
+  우측 상단 회의실 목록에서 원하는 회의실이 제대로 선택되어 있는지 확인해주세요.
+</Warning>
 <Frame>
   <img src="/images/tablet/book/tablet/img1.png" width="100%" height="500" />
 </Frame>
 <br />
-예약하시고자 하는 일자, 예약자, 시간등을 선택해줍니다. <br />
-일자 및 시간을 선택하시면, 우측 예약현황 탭에서 예약하실 시간대를 확인해보실 수 있습니다.
+
+예약하시고자 하는 일자, 예약자, 시간을 설정해주세요. <br />
+<Note>
+  일자 및 시간을 설정하시면, 우측 타임테이블에 미리보기가 표시됩니다. 다른 회의 예약 현황과 겹치는 경우 예약이 불가능합니다.
+</Note>
 <Frame>
   <img src="/images/tablet/book/tablet/img2.png" width="100%" height="500" />
 </Frame>
 
 <br />
+
 모든 예약 정보를 입력하시면, 우측 하단에 `예약` 버튼이 활성화됩니다. <br />
 해당 버튼을 눌러주시면 최종적으로 예약이 완료됩니다.
 <Frame>
@@ -31,5 +33,18 @@ description: "예약된 회의를 조회하고 바로 예약까지의 과정을 
 
 <br />
 
-회의 예약 과정을 해보셨다면, 회의 시작을 해보세요!<br />
+### 1.1 예약자 설정하기
+임직원 목록 중에서 예약자를 찾아 선택하거나, 이름 or 이메일을 검색해주세요.
+<Frame>
+  <img src="/images/tablet/book/tablet/img4.png" width="100%"/>
+</Frame>
+<br />
+
+검색된 결과에서 원하는 예약자를 선택하세요.
+<Frame>
+  <img src="/images/tablet/book/tablet/img4.png" width="100%"/>
+</Frame>
+<br />
+
+회의실을 예약하셨다면, 회의를 시작해보세요!<br />
 회의 시작에 대한 자세한 내용은 <a href="https://mile.mintlify.app/tablet/setting/noshow">회의 시작 방법</a>에서 확인해보실 수 있습니다.
