--- a/tablet/book/next.mdx
+++ b/tablet/book/next.mdx
@@ -1,38 +1,34 @@
 ---
 title: "후속 회의 예약하기"
-description: "회의 중에 다음 회의 예약까지 진행하는 과정을 알려드립니다."
+description: "회의 중에 후속 회의를 예약하는 방법을 알려드립니다."
 ---
 
 ---
 
-회의 중에 다음 회의를 예약하시려면, 회의 중 태블릿 화면에서 바로 예약을 진행하실 수 있습니다.<br />
-회의가 시작되면 아래와 같이 타이머가 작동하고 있는 태블릿 화면이 띄워집니다.<br/>
-이때, 좌측 상단에 `바로 예약` 버튼을 누르시면 예약하는 화면으로 이동할 수 있습니다.
-
+후속 회의를 예약하시려면, 태블릿에서 바로 예약을 진행하실 수 있습니다.<br />
+On-Air 화면에서 좌측 상단에 `바로 예약` 버튼을 눌러주세요.
 <Frame>
-  <img src="/images/tablet/book/next/img1.png" width="100%" height="500" />
+  <img src="/images/tablet/book/next/img1.png" width="100%"/>
 </Frame>
 
 <br />
 
-바로 예약에서 할 수 있는 설정은 다음과 같습니다.
 
--   다음 회의 일자
--   다음 회의 예약자
--   회의실 선택
--   시간 선택
-
+회의 일자, 회의 예약자, 회의실, 회의 시간을 설정해주세요.
 <Frame>
-  <img src="/images/tablet/book/next/img2.png" width="100%" height="500" />
+  <img src="/images/tablet/book/next/img2.png" width="100%" />
+</Frame>
+<Note>
+  일자 및 시간을 설정하시면, 우측 타임테이블에 미리보기가 표시됩니다. 다른 회의 예약과 겹치는 경우 예약이 불가능합니다.
+</Note>
+
+
+모든 예약 정보를 입력하시면, 우측 하단에 `예약` 버튼이 활성화됩니다. <br />
+해당 버튼을 눌러주시면 최종적으로 예약이 완료됩니다.
+<Frame>
+  <img src="/images/tablet/book/next/img3.png" width="100%"/>
 </Frame>
 
-모든 회의 정보를 설정하셨다면, 우측에 `회의실 예약현황`테이블에서 설정한 내역을 시각적으로 확인하실 수 있습니다.<br/>
-설정하신 내용이 맞으시면, 우측 하단에 있는 `예약`버튼을 눌러서 예약 확정을 하실 수 있습니다.
-
-<br />
-
-<Frame>
-  <img src="/images/tablet/book/next/img3.png" width="100%" height="500" />
-</Frame>
-
-해당 예약은 회사 구글 워크스페이스에도 같이 반영됩니다.
+<Info>
+  예약 내역은 구글 캘린더 일정에도 바로 반영됩니다.
+</Info>
