--- a/tablet/book/next.mdx
+++ b/tablet/book/next.mdx
@@ -5,7 +5,7 @@ description: "회의 중에 후속 회의를 예약하는 방법을 알려드립
 
 ---
 
-후속 회의를 예약하시려면, 태블릿에서 바로 예약을 진행하실 수 있습니다.<br />
+후속 회의를 예약하고 싶으신 경우, 태블릿에서 바로 예약을 진행할 수 있습니다.<br />
 On-Air 화면에서 좌측 상단에 `바로 예약` 버튼을 눌러주세요.
 <Frame>
   <img src="/images/tablet/book/next/img1.png" width="100%"/>
