--- a/tablet/meeting-extend/extend.mdx
+++ b/tablet/meeting-extend/extend.mdx
@@ -5,27 +5,27 @@ description: "예상보다 회의가 길어지는 경우, 마일 태블릿에서
 
 ---
 
-### 1. 회의실 예약 시간 연장하기
+## 1. 회의실 예약 시간 연장하기
 
 타이머 안에 위치한 회의 `연장하기` 버튼을 선택합니다.
 <Frame>
-    <img src="/images/tablet/meeting-extend/extend/img1.png" width="100%" height="300" />
+    <img src="/images/tablet/meeting-extend/extend/img1.png" width="100%"/>
 </Frame>
 
 <br />
 
 연장 가능한 시간 중에서 원하는 시간을 선택한 뒤, 우측 하단의 `연장` 버튼을 선택합니다.
 <Frame>
-    <img src="/images/tablet/meeting-extend/extend/img2.png" width="100%" height="300" />
+    <img src="/images/tablet/meeting-extend/extend/img2.png" width="100%" />
 </Frame>
-
+<br />
 <Info>
     바로 뒷타임 회의가 존재하는 경우 연장이 불가능합니다.<br />연장이 불가능한 경우에는 [회의 연장 요청 보내기](https://mile.mintlify.app/tablet/meeting-extend/request-extend) or [다른 회의실 이어서 예약하기](https://mile.mintlify.app/tablet/book/next) 기능을 이용해보세요.
 </Info>
 
 <br />
 
-연장이 완료되면, 연장 알림창과 함께 회의 예약 시간이 변경됩니다.
+연장이 완료되면, <strong>회의실 이용 시간</strong>이 변경됩니다.
 <Frame>
     <img src="/images/tablet/meeting-extend/extend/img3.png" width="100%" height="300" />
 </Frame>
