--- a/tablet/meeting-extend/extend.mdx
+++ b/tablet/meeting-extend/extend.mdx
@@ -25,7 +25,7 @@ description: "예상보다 회의가 길어지는 경우, 마일 태블릿에서
 
 <br />
 
-연장이 완료되면, <strong>회의실 이용 시간</strong>이 변경됩니다.
+연장이 완료되면, <strong>회의실 이용 시간이 변경</strong>됩니다.
 <Frame>
     <img src="/images/tablet/meeting-extend/extend/img3.png" width="100%" height="300" />
 </Frame>
