--- a/tablet/setting/noshow.mdx
+++ b/tablet/setting/noshow.mdx
@@ -1,44 +1,43 @@
 ---
-title: "노쇼 여부에 따른 회의 시작 방법"
+title: "노쇼 사용 여부 별 회의 시작 방법"
 description: "회의 시작하는 방법을 노쇼 설정에 따라 알려드립니다."
 ---
 
 ---
 
-<Note>
-    노쇼 기능을 사용하신다면, <a href="https://mile.mintlify.app/tablet/setting/noshow#1">노쇼 기능 활성화</a>를 확인해주세요 <br />
-    노쇼 기능을 사용하지 않으시다면, <a href="https://mile.mintlify.app/tablet/setting/noshow#2">노쇼 기능 비활성화</a>를 확인해주세요
-</Note>
+## 1. 노쇼 기능을 사용할 때 회의 시작하는 방법
 
-## 1. 노쇼 기능 활성화
-
-노쇼 기능이 활성화 된 회의실은 노쇼 처리 시간까지 대기화면이 띄워집니다.<br/>
-회의실의 설정된 노쇼 처리 시간에 따라 노쇼 처리가 진행되고, 노쇼 처리 시간 내에 하단에 있는 `회의 시작하기`버튼을 누르셔야 본 회의를 진행하실 수 있습니다.
-
-만약 시간 내에 누르지 않으면, 노쇼 처리가 되어 자동 회의 종료가 이루어지니, 반드시 진행해주셔야 합니다.
-
+노쇼 기능을 사용하는 경우, 회의 시작 시간이 되면 대기 화면으로 이동합니다.<br/>
+회의를 진행하기 전에 좌측 하단에 있는 `회의 시작하기` 버튼을 눌러줍니다.
 <Frame>
     <img src="/images/tablet/setting/noshow/img1.png" width="100%" />
 </Frame>
+<Warning>
+    만약 [마일 관리자 페이지](https://mile.mintlify.app/essentials/setting/noshow#3)에서 설정한 노쇼 처리 시간(기본 10분) 내에 시작하기 버튼을 누르지 못한 경우, 노쇼 처리 되어 자동으로 회의가 종료됩니다.
+</Warning>
+
 <br />
-회의 시작을 누르시면 회의 진행 중 여러 기능을 사용해보실 수 있는 `on-air` 화면이 띄워집니다. <br /> `on-air`화면에 대해 더 알고싶으시다면, <a href="https://mile.mintlify.app/tablet/setting/noshow#3-on-air">on-air 화면 자세히 보기</a>을 확인해주세요.
+회의 시작을 누르시면 회의 진행 화면인 `on-air 화면`으로 이동됩니다.
+<Info>
+    `on-air 화면`에 대해 더 알고싶으시다면, <a href="https://mile.mintlify.app/tablet/setting/noshow#3-on-air">on-air 화면 자세히 보기</a>을 확인해주세요.
+</Info>
 
 <Frame>
     <img src="/images/tablet/setting/noshow/img2.png" width="100%" />
 </Frame>
 
 <br />
-## 2. 노쇼 기능 비활성화
+## 2. 노쇼 기능을 사용하지 않을 때 회의 시작하는 방법
 
-노쇼 기능이 비활성화 된 회의실은 회의 시간이 되지 않았을 때 다음 타임의 회의실 예약 내역을 알려주는 대기화면이 띄워집니다. <br/>
-해당 대기화면의 자세한 내용은 <a href="https://mile.mintlify.app/tablet/show">예약 현황 조회하기</a>에서 확인하실 수 있습니다.
-
+노쇼 기능을 사용하지 않는 경우, 회의 시작 시간이 되면 바로 `on-air 화면`으로 이동됩니다. <br/>
 <Frame>
     <img src="/images/tablet/setting/noshow/img3.png" width="100%" />
 </Frame>
 
 <br />
-회의 시간이 지나면 자동은로 회의를 진행 중임을 나타내는 `on-air` 화면으로 전환됩니다.
+<Info>
+    노쇼 기능을 사용하지 않는 경우에는 특별한 액션 없이, 회의 시작 시간이 되면 바로 회의를 진행하시면 됩니다.
+</Info>
 
 <br />
 ## 3. on-air 화면 자세히 보기
@@ -48,24 +47,26 @@ on-air화면은 회의가 시작될 때 전환되는 화면이며, 회의가 진
 
 타이머 보기 옵션에 따라 on-air는 2가지 종류의 화면으로 전환될 수 있습니다.
 
-<br />
-### 3-1. 타이머 켜기
+### 3-1. 타이머가 켜져있는 On-Air 화면
 
 <Frame>
     <img src="/images/tablet/setting/noshow/img4.png" width="100%" />
 </Frame>
 
--   **예약 현황**: 예약 현황을 조회해볼 수 있는 버튼입니다.
--   **바로 예약**: 회의 중에 다음 회의를 바로 예약할 수 있습니다. <a href="https://mile.mintlify.app/tablet/book/next">더 자세히 보기</a>
--   **연장하기**: 회의시간이 부족할 때, 회의실 예약 시간을 연장할 수 있습니다. <a href="https://mile.mintlify.app/tablet/meeting-extend/extend">더 자세히 보기</a>
--   **타이머 보기**: 회의실 참여자의 선호도에 따라 타이머 보기를 설정하여 태블릿 화면을 전환시킬 수 있습니다.
--   **회의 종료**: 회의가 종료되었을 시에 누르는 버튼입니다. <a href="https://mile.mintlify.app/tablet/end">더 자세히 보기</a>
+-   **예약 현황**: 해당 회의실의 예약 현황을 볼 수 있는 버튼입니다.
+-   **바로 예약**: 회의 중에 후속 회의를 바로 예약할 수 있습니다. <a href="https://mile.mintlify.app/tablet/book/next">더 자세히 보기</a>
+-   **연장하기**: 회의 시간이 부족할 때, 회의실 예약 시간을 연장할 수 있습니다. <a href="https://mile.mintlify.app/tablet/meeting-extend/extend">더 자세히 보기</a>
+-   **타이머 보기**: 회의실 참여자의 선호도에 따라 타이머 보기를 설정하여 타이머 사용 여부를 설정할 수 있습니다..
+-   **회의 종료**: 회의가 일찍 끝난 경우, 다른 임직원들이 회의실을 이용할 수 있도록 회의를 종료 처리하는 버튼입니다. <a href="https://mile.mintlify.app/tablet/end">더 자세히 보기</a>
 
 <br />
-### 3-2. 타이머 끄기
+### 3-2. 타이머가 꺼진 On-Air 화면
 
 <Frame>
     <img src="/images/tablet/setting/noshow/img5.png" width="100%" />
 </Frame>
-
+<br />
+<Info>
+    타이머가 켜져있는 화면, 꺼져있는 화면 모두 제공하는 기능은 동일합니다.
+</Info>
 
