--- a/tablet/setting/noshow.mdx
+++ b/tablet/setting/noshow.mdx
@@ -1,6 +1,6 @@
 ---
 title: "노쇼 사용 여부 별 회의 시작 방법"
-description: "회의 시작하는 방법을 노쇼 설정에 따라 알려드립니다."
+description: "노쇼 사용 여부에 따른 회의 시작하는 방법을 알려드립니다."
 ---
 
 ---
