--- a/tablet/setting/noshow.mdx
+++ b/tablet/setting/noshow.mdx
@@ -57,7 +57,7 @@ on-air화면은 회의가 시작될 때 전환되는 화면이며, 회의가 진
 -   **예약 현황**: 해당 회의실의 예약 현황을 볼 수 있는 버튼입니다.
 -   **바로 예약**: 회의 중에 후속 회의를 바로 예약할 수 있습니다. <a href="https://mile.mintlify.app/tablet/book/next">더 자세히 보기</a>
 -   **연장하기**: 회의 시간이 부족할 때, 회의실 예약 시간을 연장할 수 있습니다. <a href="https://mile.mintlify.app/tablet/meeting-extend/extend">더 자세히 보기</a>
--   **타이머 보기**: 회의실 참여자의 선호도에 따라 타이머 보기를 설정하여 타이머 사용 여부를 설정할 수 있습니다..
+-   **타이머 보기**: 회의실 참여자의 선호도에 따라 타이머 사용 여부를 설정할 수 있습니다.
 -   **회의 종료**: 회의가 일찍 끝난 경우, 다른 임직원들이 회의실을 이용할 수 있도록 회의를 종료 처리하는 버튼입니다. <a href="https://mile.mintlify.app/tablet/end">더 자세히 보기</a>
 
 <br />
