--- a/notice/update.mdx
+++ b/notice/update.mdx
@@ -1,10 +1,8 @@
 ---
 title: "업데이트"
-description: "업데이트 소식"
+description: "마일의 새로운 기능과 업데이트 정보를 확인하세요."
 ---
 
-<Card title="1.0.0 태블릿 업데이트">머가 업데이트 되었는지 작성하시면 됩니다.</Card>
-
-<Card title="1.0.0 태블릿 업데이트">머가 업데이트 되었는지 작성하시면 됩니다.</Card>
-
-<Card title="1.0.0 태블릿 업데이트">머가 업데이트 되었는지 작성하시면 됩니다.</Card>
+<Card title="[23.10.26] 마일 태블릿 런칭" href="/update/20231026.mdx">
+  `New` 회의실 일정 관리 솔루션, 마일 태블릿이 런칭되었습니다! 
+</Card>
