--- a/notice/update/2023.12.01.mdx
+++ b/notice/update/2023.12.01.mdx
@@ -1,5 +1,5 @@
 ---
-title: "[23.11.09] 마일 1.2.0 업데이트"
+title: "[23.12.01] 마일 1.2.0 업데이트"
 ---
 
 <Note>
@@ -8,6 +8,9 @@ title: "[23.11.09] 마일 1.2.0 업데이트"
 `Feature` 권한이 추가됨에 따라 일부 로직이 수정되었습니다.
 
 </Note>
+
+안녕하세요, 마일 팀입니다.  
+기업 방문자 관리 솔루션, Mile Visitors가 런칭되었습니다! 🎉
 
 ### Mile Visitors
 
