--- a/visitors/call-host/register-visit.mdx
+++ b/visitors/call-host/register-visit.mdx
@@ -1,23 +1,36 @@
 ---
-title: "예약 방문"
-description: "마일에서 방문객 정보를 조회하는 방법을 알려드립니다."
+title: "예약 방문시 담당자 호출"
+description: "사전 예약을 통해 방문한 방문자가 기업에 도착하여 호출하는 방법을 알려드립니다."
 ---
 
 ---
 
-<Frame>
-    <img src="/images/visitors/register-link/schedule/img1.png" width="98%" />
-    <img src="/images/visitors/register-link/schedule/img2.png" width="98%" />
-</Frame>
+방문 당일 방문객을 맞이하는 기업 출입문 앞에 설치된 키오스크 화면은 아래와 같습니다.
 
-마일 Visitors -> 방문자 등록 링크 생성 탭에서 방문객 정보를 조회할 수 있습니다.
+사전에 등록이 된 방문의 경우에는 `예약 방문`을 통해 담당자를 호출할 수 있습니다.
 
-앞으로 예정된 방문 일정은 `예약된 일정` 탭에서, 지난 방문기록들은 `진행된 일정` 탭에서 확인 가능합니다.
+    <img src="/images/visitors/call-host/register-visit/img1.png" width="48%" />
 
 <br />
 
+사전에 방문 정보를 등록한 방문객의 경우, 방문객의 전화번호를 입력하면 등록된 일정의 담당자를 호출할 수 있습니다.
+
+    <img src="/images/visitors/call-host/register-visit/img2.png" width="48%" />
+
+<br />
+
+전화번호 정보를 기준으로 등록된 일정의 담당자의 정보가 나타나며, 해당 방문객의 담당자인지 확인 후에 호출하기 버튼을 눌러주면 담당자의 슬랙으로 방문객의 도착 정보가 전송됩니다.
+
 <Frame>
-    <img src="/images/visitors/register-link/schedule/img3.png" width="100%" />
+    <img src="/images/visitors/call-host/register-visit/img3.png" width="98%" />
+    <img src="/images/visitors/call-host/register-visit/img4.png" width="98%" />
 </Frame>
 
-각각의 방문 일정이 담긴 카드에서는 방문의 상세정보를 조회하실 수 있습니다. 방문 시각, 일자, 목적까지 방문객들의 소속 정보를 구체적으로 확인할 수 있습니다.
+<br />
+
+담당자는 방문객의 도착 정보를 슬랙으로 받아볼 수 있으며, 아래 사진과 같이 `확인했어요` 버튼을 누르면, 최종적으로 기다리고 있는 방문객에게 **담당자가 확인하였다**는 메세지가 전달됩니다.
+
+<Frame>
+    <img src="/images/visitors/call-host/register-visit/img6.png" width="98%" />
+    <img src="/images/visitors/call-host/register-visit/img5.png" width="98%" />
+</Frame>
