--- a/essentials/meeting/noshow.mdx
+++ b/essentials/meeting/noshow.mdx
@@ -8,18 +8,16 @@ description: "노쇼 설정을 통해 회의실을 효율적으로 관리할 수
 > 노쇼기능에 따라 태블릿내 회의 시작 과정이 일부 달라집니다.<br/>
 > 해당 내용은 <a href="https://mile.mintlify.app/tablet/setting/noshow">노쇼 옵션에 따른 회의 시작 방법</a>에서 확인 하실 수 있습니다.
 
-## 1. 태블릿 관리 접속하기
+## 1. Mile Meeting 정책 관리 접속하기
 
-로그인 후 나오는 메인 페이지에서 좌측 목록 부분에 `태블릿 관리`탭을 클릭하셔서 태블릿 관리 페이지로 접속합니다.
+좌측 `Mile Meeting` 탭에서 `정책 관리`탭을 클릭하여 정책 관리 페이지로 접속합니다.
 
+<img src="/images/essentials/meeting/noshow/img1.png" width="100%" height="300" />
 
-<img src="/images/essentials/setting/noshow/img1.png" width="100%" height="300" />
-
-> 태블릿 관리 탭은 회의실 내 설치된 마일 태블릿의 계정을 관리하거나 기능을 커스터마이징 할 수 있는 페이지입니다.
+> 정책 관리 페이지는 회의실 내 설치된 마일 태블릿의 기능을 커스터마이징 할 수 있는 페이지입니다.
 
 **현재 제공하고 있는 기능은 다음과 같습니다.**
 
--   태블릿 계정 관리
 -   노쇼 기능 커스터마이징
 
 <br />
@@ -33,27 +31,20 @@ description: "노쇼 설정을 통해 회의실을 효율적으로 관리할 수
 -   및 노쇼 슬랙 알림 시간
 -   노쇼 처리 시간 커스터마이징이 있습니다.
 
-<img src="/images/essentials/setting/noshow/img2.png" width="100%" height="300" />
-
-<br />
+<img src="/images/essentials/meeting/noshow/img2.png" width="100%" height="300" />
 
 회의실 예약 노쇼 체크를 활성화 및 비활성화를 하고싶으시다면, `기능` 탭의 `노쇼 체크 활성화` 섹션의 오른쪽 스위치로 활성화 여부를 선택하실 수 있습니다.
 
-<img src="/images/essentials/setting/noshow/img3.png" width="100%" height="300" />
-
 <br />
+
 노쇼 커스터마이징을 수정하시면, 현재 태블릿 계정으로 로그인 된 모든 태블릿들에 바로 적용됩니다.
-
-스위치 클릭시 뜨는 모달의 `변경하기`버튼을 누르시면 최종적으로 노쇼 여부가 수정됩니다.
-
-<img src="/images/essentials/setting/noshow/img4.png" width="100%" height="300" />
-<br />
 
 ## 3. 노쇼 처리 시간 및 알림 시간 설정하기
 
 노쇼 처리 시간 및 알림 시간은 `노쇼 체크 활성화` 섹션 바로 아래 `노쇼 알림 시간` `노쇼 처리 시간`에서 커스터마이징 하실 수 있습니다.
 
-<img src="/images/essentials/setting/noshow/img5.png" width="100%" height="300" />
+<img src="/images/essentials/meeting/noshow/img3.png" width="100%" height="300" />
+<br />
 
 해당 시간은 5분 단위로 설정하실 수 있으시며, 노쇼 처리 시간은 항상 노쇼 알림 시간보다 긴 시간으로 설정이 되어야만 설정하실 수 있습니다.
 
@@ -62,12 +53,13 @@ description: "노쇼 설정을 통해 회의실을 효율적으로 관리할 수
 
 노쇼 알림 시간과 노쇼 처리 시간이 같은 10분으로 설정하신다면, 경고 문구가 뜨고 설정이 되지 않습니다.
 
-<img src="/images/essentials/setting/noshow/img6.png" width="100%" height="300" />
+<img src="/images/essentials/meeting/noshow/img4.png" width="100%" height="300" />
 
 <br />
 노쇼 알림 시간이 노쇼 처리 시간보다 큰 15분으로 설정하신다면, 설정 완료 문구가 뜨고 설정이 완료됩니다.
-<img src="/images/essentials/setting/noshow/img7.png" width="100%" height="300" />
+<img src="/images/essentials/meeting/noshow/img5.png" width="100%" height="300" />
 
 <br />
-노쇼 기능 커스터마이징은 설정에 따라 회의 시작 과정이 일부 달라집니다. 추가적인 태블릿 사용 방법을 확인하시려면, <a href="https://mile.mintlify.app/tablet/setting/noshow">노쇼 옵션에 따른 회의 시작 방법</a>에서
-확인 하실 수 있습니다.
+노쇼 기능 커스터마이징은 설정에 따라 회의 시작 과정이 일부 달라집니다. 추가적인 태블릿 사용 방법을 확인하시려면,
+<a href="https://mile.mintlify.app/tablet/setting/noshow">노쇼 옵션에 따른 회의 시작 방법</a>
+에서 확인 하실 수 있습니다.
