--- a/essentials/meeting/tablet-login.mdx
+++ b/essentials/meeting/tablet-login.mdx
@@ -1,6 +1,6 @@
 ---
-title: "[태블릿] 로그인 및 회의실 설정하기"
-description: "태블릿 로그인 방법과 회의실 설정하는 방법을 알려드립니다."
+title: "로그인 및 회의실 설정하기"
+description: "로그인 방법과 회의실 설정하는 방법을 알려드립니다."
 ---
 
 ---
@@ -12,7 +12,7 @@ description: "태블릿 로그인 방법과 회의실 설정하는 방법을 알
 <br />
 
 <Frame>
-  <img src="/images/essentials/tablet-login/img1.png" width="100%" height="500" />
+    <img src="/images/essentials/tablet-login/img1.png" width="100%" height="500" />
 </Frame>
 
 태블릿 관리 탭은 회의실 내 설치된 마일 태블릿의 계정을 관리하거나 기능을 커스터마이징 할 수 있는 페이지입니다.
@@ -28,7 +28,7 @@ description: "태블릿 로그인 방법과 회의실 설정하는 방법을 알
 초기에는 태블릿 코드가 랜덤한 값으로 주어집니다. 만약 태블릿 코드를 수정하고 싶으시다면, [태블릿 코드 변경](https://mile.mintlify.app/essentials/setting/upload-code)에서 더 자세한 내용을 확인하실 수 있습니다.
 
 <Frame>
-  <img src="/images/essentials/tablet-login/img2.png" width="100%" height="500" />
+    <img src="/images/essentials/tablet-login/img2.png" width="100%" height="500" />
 </Frame>
 <br />
 ## 2. 태블릿 로그인하기
@@ -39,7 +39,7 @@ description: "태블릿 로그인 방법과 회의실 설정하는 방법을 알
 
 <br />
 <Frame>
-  <img src="/images/essentials/tablet-login/img3.png" width="100%" height="500" />
+    <img src="/images/essentials/tablet-login/img3.png" width="100%" height="500" />
 </Frame>
 
 <br />
@@ -52,7 +52,7 @@ description: "태블릿 로그인 방법과 회의실 설정하는 방법을 알
 <Info>하나의 회의실에는 하나의 태블릿이 설정(로그인) 해주셔야 합니다.</Info>
 
 <Frame>
-  <img src="/images/essentials/tablet-login/img4.png" width="100%" height="500" />
+    <img src="/images/essentials/tablet-login/img4.png" width="100%" height="500" />
 </Frame>
 
 <br />
