--- a/essentials/meeting/tablet-logout.mdx
+++ b/essentials/meeting/tablet-logout.mdx
@@ -1,39 +1,43 @@
 ---
-title: "[태블릿] 로그아웃 및 회의실 변경하기"
-description: "태블릿 로그아웃 방법과 회의실 변경 방법을 알려드립니다."
+title: "로그아웃 및 회의실 변경하기"
+description: "로그아웃 방법과 회의실 변경 방법을 알려드립니다."
 ---
 
 ---
 
 ## 1. 태블릿 로그아웃하기
+
 <Warning>로그아웃 시, 자동로그인이 해제됩니다.</Warning>
 
 홈 화면에서 좌측 상단에 회의실명과 일시가 표시된 헤더를 선택합니다.
 
 <Frame>
-  <img src="/images/essentials/tablet-logout/img1.png" width="100%" />
+    <img src="/images/essentials/tablet-logout/img1.png" width="100%" />
 </Frame>
 
 <br />
 
 옵션 창이 뜨면 로그아웃 버튼을 선택합니다.
+
 <Frame>
-  <img src="/images/essentials/tablet-logout/img2.png" width="100%" />
+    <img src="/images/essentials/tablet-logout/img2.png" width="100%" />
 </Frame>
 
 <br />
 
 비밀번호 입력창이 뜨면, 태블릿 계정 비밀번호를 입력합니다.
+
 <Info>로그아웃 or 회의실 변경 시 비밀번호 확인이 필요합니다.</Info>
 <Frame>
-  <img src="/images/essentials/tablet-logout/img3.png" width="100%" />
+    <img src="/images/essentials/tablet-logout/img3.png" width="100%" />
 </Frame>
 
 <br />
 
 로그아웃이 성공하면 태블릿 로그인 창으로 이동됩니다.
+
 <Frame>
-  <img src="/images/essentials/tablet-logout/img4.png" width="100%" />
+    <img src="/images/essentials/tablet-logout/img4.png" width="100%" />
 </Frame>
 
 <br />
@@ -43,28 +47,31 @@ description: "태블릿 로그아웃 방법과 회의실 변경 방법을 알려
 홈 화면에서 좌측 상단에 회의실명과 일시가 표시된 헤더를 선택합니다.
 
 <Frame>
-  <img src="/images/essentials/tablet-logout/img1.png" width="100%" />
+    <img src="/images/essentials/tablet-logout/img1.png" width="100%" />
 </Frame>
 
 <br />
 
 옵션 창이 뜨면 회의실 변경하기 버튼을 선택합니다.
+
 <Frame>
-  <img src="/images/essentials/tablet-logout/img5.png" width="100%" />
+    <img src="/images/essentials/tablet-logout/img5.png" width="100%" />
 </Frame>
 
 <br />
 
 비밀번호 입력창이 뜨면, 태블릿 계정 비밀번호를 입력합니다.
+
 <Info>로그아웃 or 회의실 변경 시 비밀번호 확인이 필요합니다.</Info>
 <Frame>
-  <img src="/images/essentials/tablet-logout/img6.png" width="100%" />
+    <img src="/images/essentials/tablet-logout/img6.png" width="100%" />
 </Frame>
 
 <br />
 
 성공 시, 회의실 선택 화면으로 이동됩니다.
+
 <Frame>
-  <img src="/images/essentials/tablet-logout/img7.png" width="100%" />
+    <img src="/images/essentials/tablet-logout/img7.png" width="100%" />
 </Frame>
- 원하는 회의실을 선택하고, 완료 버튼을 눌러 설정을 완료합니다.
+원하는 회의실을 선택하고, 완료 버튼을 눌러 설정을 완료합니다.
