--- a/essentials/visitors/방문-안내-메세지-설정하기.mdx
+++ b/essentials/visitors/방문-안내-메세지-설정하기.mdx
@@ -17,13 +17,18 @@ Mile Visitors는 방문 회사까지의 상세한 정보 제공을 위해 방문
 
 좌측 탭의 `Mile Visitors` 을 클릭 한 후, `서비스 커스터마이징` 서브 목록의 `방문 안내 메세지 관리`를 클릭하여 해당 페이지에 접속해주세요.
 
-해당 페이지에서는 기존에 입력한 방문 안내 메세지를 보실 수 있는 페이지입니다.
+해당 페이지에서는 기존에 입력한 방문 안내 메세지를 보실 수 있는 페이지입니다. 현재 제공하고 있는 언어별 템플릿은 한국어/영어가 있으며, 해당 언어 선택별로 안내 템플릿을 다르게 설정하고 보실 수 있습니다.
 
 **설정 정보**
 
 -   주소 설정 (상세 주소 설정)
 -   추가 안내사항
 -   오시는 길 상세 설명
+
+**설정 가능 언어**
+
+-   한국어
+-   영어
 
 <Frame>
     <img src="/images/visitors/visit-intro-message-setting/img1.png" width="100%" />
@@ -39,16 +44,12 @@ Mile Visitors는 방문 회사까지의 상세한 정보 제공을 위해 방문
 </Frame>
 
 <br />
-저장하기 페이지로 이동하시면, 주소 설정 및 추가 안내사항, 오시는 길 상세 설명등의 편집기가 활성화 됩니다.
+수정하기 페이지로 이동하시면, 주소 설정 및 추가 안내사항, 오시는 길 상세 설명등의 편집기가 활성화 됩니다.
+
+작성하고 싶은 정보들을 편집기를 통해 작성한 뒤, 우측 상단에 위치해있는 저장하기 버튼을 다시 클릭하여 최종 작성한 내용을 적용합니다.
 
 <Frame>
     <img src="/images/visitors/visit-intro-message-setting/img3.png" width="100%" />
-</Frame>
-
-<br />
-작성하고 싶은 정보들을 편집기를 통해 작성한 뒤, 우측 상단에 위치해있는 저장하기 버튼을 다시 클릭하여 최종 작성한 내용을 적용합니다.
-<Frame>
-    <img src="/images/visitors/visit-intro-message-setting/img4.png" width="100%" />
 </Frame>
 
 <br />
@@ -56,10 +57,12 @@ Mile Visitors는 방문 회사까지의 상세한 정보 제공을 위해 방문
 
 최종적으로 적용된 모습은 아래와 같습니다.
 
-기본적으로 방문시 담당자를 호출할 수 있는 QR코드 및 입력 코드와 방문 일정을 볼 수 있는 방문 상세 내역이 상단에 위치해있습니다.
-
-바로 아래 기존에 작성된 추가 안내사항 및 오시는길 상세 설명이 적용되어 보이며, 관리페이지에서 설정한 주소가 지도와 함께 표시됩니다.
+`사전 방문자 등록`페이지에서, 방문자 등록을 하실 때, 선택하신 언어에 따라 한국어/ 영어 템플릿이 방문자에게 전송됩니다. 관련하여 더 자세한 내용을 확인하시려면 [사전 방문자 등록]("http://localhost:3000/visitors/register-link/register")을 클릭해주세요.
 
 <Frame>
     <img src="/images/visitors/visit-intro-message-setting/img5.png" width="100%" />
 </Frame>
+
+-   기본적으로 방문시 담당자를 호출할 수 있는 QR코드 및 입력 코드와 방문 일정을 볼 수 있는 방문 상세 내역이 상단에 위치해있습니다.
+
+-   바로 아래 기존에 작성된 추가 안내사항 및 오시는길 상세 설명이 적용되어 보이며, 관리페이지에서 설정한 주소가 지도와 함께 표시됩니다.
