--- a/essentials/visitors/방문-안내-메세지-설정하기.mdx
+++ b/essentials/visitors/방문-안내-메세지-설정하기.mdx
@@ -57,7 +57,7 @@ Mile Visitors는 방문 회사까지의 상세한 정보 제공을 위해 방문
 
 최종적으로 적용된 모습은 아래와 같습니다.
 
-`사전 방문자 등록`페이지에서, 방문자 등록을 하실 때, 선택하신 언어에 따라 한국어/ 영어 템플릿이 방문자에게 전송됩니다. 관련하여 더 자세한 내용을 확인하시려면 [사전 방문자 등록]("http://localhost:3000/visitors/register-link/register")을 클릭해주세요.
+`사전 방문자 등록`페이지에서, 방문자 등록을 하실 때, 선택하신 언어에 따라 한국어/ 영어 템플릿이 방문자에게 전송됩니다. 관련하여 더 자세한 내용을 확인하시려면 [사전 방문자 등록]("http://mile.mintlify.app/visitors/register-link/register")을 클릭해주세요.
 
 <Frame>
     <img src="/images/visitors/visit-intro-message-setting/img5.png" width="100%" />
