--- a/essentials/visitors/visit-slack-setting.mdx
+++ b/essentials/visitors/visit-slack-setting.mdx
@@ -1,5 +1,5 @@
 ---
-title: "방문 목적별 담당자 설정하기"
+title: "당일 방문 목적별 담당자 설정하기"
 description: "당일 방문자가 호출할 시에 슬랙 알람을 받아볼 수 있는 담당자를 설정하는 방법을 알려드립니다."
 ---
 
