--- a/essentials/member-permission.mdx
+++ b/essentials/member-permission.mdx
@@ -7,13 +7,6 @@ description: "mile에서의 구성원 권한을 설정하는 방법을 알려드
 
 <Warning>멤버 권한 관리 페이지는 권한 별로 제공하는 기능이 달라집니다. </Warning>
 
-<br />
-멤버 권한 관리 페이지는 설정 탭의 멤버 권한 관리 를 선택하시면 접속하실 수 있습니다.
-
-<Frame>
-    <img src="/images/essentials/member-permission/img1.png" />
-</Frame>
-
 ## 1. 마일 권한 소개
 
 마일 서비스는 23년 12월 기준으로 구글 워크스페이스 계정 상의 최고 권한 관리자의 최초 1회 회원가입 시, 다른 임직원 분들도 회원가입 절차 없이 구글 계정 그대로 이용가능합니다.
@@ -22,10 +15,28 @@ description: "mile에서의 구성원 권한을 설정하는 방법을 알려드
 
 -   **최고 관리자**: 최고 관리자를 제외한 구성원의 관리자 및 일반 권한을 수정할 수 있습니다. 마일에서 제공하는 모든 설정에 접근이 가능합니다.
 -   **관리자**: 구성원의 권한을 조회할 수 있습니다. 구글 및 슬랙과 같은 서비스 연동을 제외한 모든 설정에 접근이 가능합니다.
--   **일반**: 모든 설정에 대해서 접근이 불가능합니다. Mile Visitors를 사용하시는 경우, Mile Visitors의 나의 방문 기록 관리 페이지를 사용할 수 있습니다.
+-   **일반**: 모든 설정에 대해서 접근이 불가능합니다. 개인 프로필 설정 및 Mile Visitors를 사용하시면, **나의 방문자 관리** 페이지 사용이 가능합니다.
 
 <br />
-## 2. 멤버 조회하기
+## 2. 멤버 권한 관리 페이지 접속하기
+
+멤버 권한 관리 페이지는 `설정` 탭의 `멤버 권한 관리` 를 선택하시면 접속하실 수 있습니다.
+
+<Frame>
+    <img src="/images/essentials/member-permission/img1.png" />
+</Frame>
+
+<br />
+
+해당 페이지에서는 크게 3가지 기능을 제공합니다.
+
+-   멤버 동기화하기
+-   멤버 조회하기
+-   멤버 권한 수정하기
+
+<br />
+
+## 3. 멤버 조회하기
 
 멤버를 조회하는데 있어서 각각의 필터에서 **슬랙 연동 유무와 역할(권한)을 필터링**해서 조회를 해볼 수 있습니다.
 
@@ -34,6 +45,7 @@ description: "mile에서의 구성원 권한을 설정하는 방법을 알려드
 </Frame>
 
 <br />
+
 해당 필터를 설정하면, 표 상단에 어떤 필터가 걸렸는지에 대한 정보와 함께 데이터가 나타납니다.
 
 <Frame>
@@ -41,7 +53,8 @@ description: "mile에서의 구성원 권한을 설정하는 방법을 알려드
 </Frame>
 
 <br />
-## 3. 멤버 권한 수정하기
+
+## 4. 멤버 권한 수정하기
 
 `역할` 컬럼에서 최고 관리자가 아닌 다른 구성원들의 역할을 수정할 수 있습니다.
 
@@ -49,4 +62,13 @@ description: "mile에서의 구성원 권한을 설정하는 방법을 알려드
 
 <Frame>
     <img src="/images/essentials/member-permission/img4.png" />
+</Frame>
+
+<br />
+## 5. 멤버 동기화하기
+
+신규 입사와 같이 기존 멤버 목록에 변동이 있을 때 해당 멤버 동기화 버튼을 눌러주시면, 마일 서비스에 반영됩니다.
+
+<Frame>
+    <img src="/images/essentials/member-permission/img5.png" />
 </Frame>
