--- a/essentials/manage-account/update-code.mdx
+++ b/essentials/manage-account/update-code.mdx
@@ -1,5 +1,5 @@
 ---
-title: "기기 관리하기"
+title: "기기 로그인 계정 변경하기"
 description: "서비스 로그인시 필요한 기기 코드를 변경하는 방법을 알려드립니다."
 ---
 
@@ -7,41 +7,49 @@ description: "서비스 로그인시 필요한 기기 코드를 변경하는 방
 
 ## 1. 태블릿 관리 접속하기
 
-로그인 후 나오는 메인 페이지에서 좌측 목록 부분에 `기기 계정 관리`탭을 클릭해서 기기 관리 페이지로 접속합니다.
+로그인 후 나오는 메인 페이지에서 좌측 목록 부분에 `기업 정보 관리`탭을 클릭해서 기기 관리 페이지로 접속합니다.
 
-<img src="/images/essentials/manage-account/update-code/img1.png" width="100%" height="500" />
-기기 관리 탭은 회의실 내 설치된 기기의 계정을 관리할 수 있는 페이지입니다.
+<Frame>
+    <img src="/images/essentials/manage-account/update-code/img1.png" width="100%"></img>
+</Frame>
 
-**현재 제공하고 있는 기능은 다음과 같습니다**
+<br />
+기업 정보 관리 페이지내 `기기 로그인 계정` 섹션에서 태블릿 코드 수정을 하실 수 있습니다.
 
--   태블릿 계정 관리
+해당 섹션에서 보이는 태블릿 계정으로 태블릿을 로그인하여 마일 기능을 사용하실 수 있습니다. 태블릿 로그인에 대해서 더 자세히 확인하시려면 <a href="https://mile.mintlify.app/essentials/meeting/tablet-login">로그인 및 회의실 선택하기</a>에서 확인해보실 수 있습니다.
+
+<Frame>
+    <img src="/images/essentials/manage-account/update-code/img2.png" width="100%"></img>
+</Frame>
+
+<br />
+## 2. 기기 계정 변경하기
+
+처음 마일 계정을 생성하시면, 태블릿 계정의 비밀번호는 랜덤한 값으로 지정됩니다. 해당 계정을 수정하시려면, 우측 `변경`버튼을 통해서 수정해 보실 수 있습니다.
+
+<Frame>
+    <img src="/images/essentials/manage-account/update-code/img3.png" width="100%"></img>
+</Frame>
 
 <br />
 
-기기 관리 페이지내 `계정` 섹션에서 태블릿 코드 수정을 하실 수 있습니다.
+**변경** 버튼을 클릭 후, 로그인 계정을 수정할 수 있는 모달창이 뜹니다.
+모달 창에서 변경하고자 하는 기기 아이디와 코드를 입력해주세요!
 
-해당 섹션에서 보이는 태블릿 계정으로 태블릿을 로그인하여 마일 기능을 사용하실 수 있습니다. 태블릿 로그인에 대해서 더 자세히 확인하시려면 <a href="https://mile.mintlify.app/essentials/tablet-login">로그인 및 회의실 선택하기</a>에서 확인해보실 수 있습니다.
+단, 아이디와 코드는 4자리 이상 작성해주셔야 저장하실 수 있습니다.
 
-<img src="/images/essentials/manage-account/update-code/img2.png" width="100%" height="500" />
-
-<br />
-## 2. 태블릿 코드 변경하기
-
-처음 마일 계정을 생성하시면, 태블릿 계정의 비밀번호는 랜덤한 값으로 지정됩니다. 해당 계정을 수정하시려면, 우측 `코드 변경`버튼을 통해서 수정해
-보실 수 있습니다.
+<Frame>
+    <img src="/images/essentials/manage-account/update-code/img4.png" width="100%"></img>
+</Frame>
 
 <br />
-<img src="/images/essentials/manage-account/update-code/img3.png" width="100%" height="500" />
-<br />
-태블릿 코드는 4자 이상 20자 이내로 작성이 되어야 변경이 가능합니다.
 
-<img src="/images/essentials/manage-account/update-code/img4.png" width="100%" height="500" />
-<br />
+코드를 입력하신 후에 코드 변경 버튼을 눌러 최종적으로 코드를 변경하실 수 있습니다.
 
-코드를 입력하신 후에 `코드 변경` 버튼을 눌러 최종적으로 코드를 변경하실 수 있습니다.
-
-<img src="/images/essentials/manage-account/update-code/img5.png" width="100%" height="500" />
+<Frame>
+    <img src="/images/essentials/manage-account/update-code/img5.png" width="100%"></img>
+</Frame>
 
 <br />
-변경하신 태블릿 코드로 태블릿에 로그인하여 직접 사용해보고 싶으시다면,
-<a href="https://mile.mintlify.app/essentials/tablet-login">로그인 및 회의실 선택하기</a>에서 더 자세한 과정을 확인해보실 수 있습니다.
+
+변경하신 태블릿 코드로 태블릿에 로그인하여 직접 사용해보고 싶으시다면, <a href="https://mile.mintlify.app/essentials/meeting/tablet-login">로그인 및 회의실 선택하기</a>에서 더 자세한 과정을 확인해보실 수 있습니다.
