--- a/essentials/manage-account/modify-info.mdx
+++ b/essentials/manage-account/modify-info.mdx
@@ -7,9 +7,7 @@ description: "서비스에 반영되는 기업 정보 수정 방법을 안내합
 
 ## 1. 기업 정보 조회하기
 
-로그인 후 첫 전째 탭인 `설정` 아이콘을 클릭하여 해당 페이지로 이동합니다.
-
-`기업 정보 관리` 탭에서 설정된 기업 정보를 조회할 수 있으며, 설정된 기업 정보는 **Mile Meeting / Mile Visitors** 태블릿 내에 회사 정보를 표시할때의 정보로 사용됩니다.
+로그인 후 첫 전째 탭인 설정 아이콘을 클릭하시고, 목록탭의 기업 정보 관리 를 클릭하여 해당 페이지로 이동합니다.
 
 <br />
 <Frame>
@@ -18,9 +16,18 @@ description: "서비스에 반영되는 기업 정보 수정 방법을 안내합
 
 <br />
 
+해당 탭에서는 2가지 기능을 제공합니다.
+
+-   기업 정보 - 사용 중인 태블릿 기기 내에 표시될 기업 사진 및 이름을 조회 및 수정할 수 있습니다.
+-   기기 로그인 계정 - 사용 중인 태블릿 기기를 로그인 할 수 있는 계정을 수정 및 조회할 수 있습니다.
+
+해당 페이지에서는 기업 정보를 수정하고 조회하는 내용에대해서 안내드리겠습니다.
+
+<br />
+
 ## 2. 기업 정보 수정하기
 
-기업 정보 수정은 `기업 정보 관리` 탭의 우측 상단 부분에 `수정하기` 버튼을 클릭하시면 수정 화면으로 전환되어 진행하실 수 있습니다.
+기업 정보 수정은 기업 정보 관리 탭의 우측 상단 부분에 수정하기 버튼을 클릭하시면 수정 화면으로 전환되어 진행하실 수 있습니다.
 
 <br />
 <Frame>
