--- a/notice/update.mdx
+++ b/notice/update.mdx
@@ -3,6 +3,11 @@ title: "업데이트 목록"
 description: "마일의 새로운 기능과 업데이트 정보를 확인하세요."
 ---
 
+<Card title="[23.03.17] 마일 1.2.7 업데이트" href="https://mile.mintlify.app/notice/update/2024.03.17">
+    `Feature` Mile Visitors 사전 방문자 등록시, 개별 방문 활성화 기능이 추가되었습니다. <br />
+    `Fix` Mile Visitors 예약 방문 과정의 프로세스가 변경되었습니다. (인원 선택 방식) <br />
+</Card>
+
 <Card title="[23.03.01] 마일 1.2.6 업데이트" href="https://mile.mintlify.app/notice/update/2024.03.01">
     `Feature` 개인 캘린더 연동 기능이 추가되었습니다. <br />
     `Feature` Mile Visitors 캘린더 일정 정보 등록 기능이 추가되었습니다. <br />
