--- a/essentials/visitors/edit-device-name.mdx
+++ b/essentials/visitors/edit-device-name.mdx
@@ -1,6 +1,6 @@
 ---
-title: "태블릿 기기 명칭 수정하기"
-description: "사용하고 있는 태블릿의 명칭을 수정하는 방법을 안내해드립니다."
+title: "기기별 명칭 & 사용 기능 설정하기"
+description: "Mile Visitors 제품에 사용되는 기기명을 수정하고 기기별 홈 화면 구성 및 사용할 기능을 설정하는 방법을 안내드립니다."
 ---
 
 ---
@@ -16,23 +16,23 @@ description: "사용하고 있는 태블릿의 명칭을 수정하는 방법을 
 
 좌측의 `Mile Visitors` 탭을 클릭하고, 목록에서 `기기 관리` 페이지를 클릭하여, 해당 페이지에 접속해주세요.
 
-기기 관리 페이지는 Visitors의 등록된 기기 정보를 조회하고 수정할 수 있습니다.
+기기 관리 페이지에서는 Visitors 제품에 등록된 기기 정보를 조회하고 각 기기별로 태블릿에서 활성화시킬 기능을 설정할 수 있습니다.
 
 <Frame>
     <img src="/images/essentials/visitors/edit-device-name/img1.png" width="100%" />
 </Frame>
 
 <br />
-## 2. 기기 명칭 수정하기
+## 2. 설정할 기기 선택하기
 
-명칭을 수정하고자 하는 기기를 클릭해주세요.
+설정하고자 하는 기기를 선택해주세요.
 
 <Frame>
     <img src="/images/essentials/visitors/edit-device-name/img2.png" width="100%" />
 </Frame>
 
 <br />
-기기를 클릭하면, 기기의 정보 (기기명 / 등록 일자)가 띄워지며, 하단의 `수정하기` 버튼을 클릭하면 수정할 수 있는 화면으로 전환됩니다.
+기기를 선택하면 해당 기기의 설정 현황을 조회할 수 있고 기기에서 사용할 기능을 설정할 수 있는 사이드 창이 띄워집니다.
 
 <Frame>
     <img src="/images/essentials/visitors/edit-device-name/img3.png" width="100%" />
@@ -40,8 +40,42 @@ description: "사용하고 있는 태블릿의 명칭을 수정하는 방법을 
 
 <br />
 
-수정하고자 하는 명칭을 작성해주시고, 하단의 `저장하기` 버튼을 클릭해주시면, 최종적으로 기기의 명칭이 반영됩니다.
+## 3. 기기명 설정하기
+
+첫 번째 탭인 기기 정보 탭에서 기기명을 수정할 수 있습니다. 기기명 우측에 위치한 수정 아이콘을 선택하여 수정을 진행해주세요.
+
+<Info>
+    기기 명칭은 방문자가 도착했을 때, 어떤기기에서 방문자가 도착했는지 등의 정보를 특정할 수 있습니다. Mile Visitors 태블릿을 여러대
+    사용하시는 경우, 해당 명칭을 설정하여 보다 더 효율적으로 솔루션을 사용해보세요!
+</Info>
 
 <Frame>
     <img src="/images/essentials/visitors/edit-device-name/img4.png" width="100%" />
 </Frame>
+
+<br />
+
+수정하고자 하는 기기명을 작성한 뒤, 우측의 저장 버튼을 클릭해주시면, 최종적으로 기기명이 설정됩니다.
+
+<Frame>
+    <img src="/images/essentials/visitors/edit-device-name/img5.png" width="100%" />
+</Frame>
+
+<br />
+
+## 4. 기기별 사용 기능 설정하기
+
+기기 정보 탭의 `기능 설정` 영역에서 해당 기기의 기능 설정 현황을 조회할 수 있습니다.
+
+상단에 위치한 탭을 선택하여 이동하거나 `기능 설정` 영역에서 원하는 기능을 선택하면 수정할 수 있는 탭으로 이동됩니다.
+
+<Frame>
+    <img src="/images/essentials/visitors/edit-device-name/img6.png" width="100%" />
+</Frame>
+<br />
+
+각 기능별 상세 설정 방법은 아래 링크에서 확인할 수 있습니다!
+
+-   기기별 홈 화면 구성하기
+-   기기별 초인종 설정하기
+-   기기별 당일 방문 설정하기
